# Climate_API

./: .env.example  .gitignore  ARCHITECTURE.md  CONSORTIUM_SUMMARY.md  FINAL_SUMMARY.md  HEALTH_CLIMATE_OPTIMIZATION.md  IMPLEMENTATION_SUMMARY.md  MULTI_VARIABLE_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_START_MULTI_VARIABLES.md  README.md  README_v2.md  SECURITY_AND_DEPLOYMENT.md  STREAMLIT_DEPLOYMENT.md  TRANSFORMATION_SUMMARY.md  climate_data_health_study_soweto.csv  climate_summary_health_study.csv  example_multi_variable_usage.py  extract_climate_data.py  link_climate.py  pyproject.toml  requirements-updated.txt  requirements.txt  test_backward_compatibility.py  test_gee_connection.py  test_multi_variables.py  test_output_all_variables_combined.csv  test_output_custom_combination_(temp_+_precip_+_wind).csv  test_output_evapotranspiration.csv  test_output_humidity_(dewpoint).csv  test_output_precipitation.csv  test_output_solar_radiation.csv  test_output_surface_pressure.csv  test_output_temperature_only_(backward_compatibility).csv  test_output_wind_(speed_and_components).csv  test_real_world_scenario.py  test_request.json
.streamlit/: secrets.toml.example
Scripts/: 01_basic_temperature_extraction_working.py  case_study_soweto_working.py
app/: APP_README.md  QUICK_GUIDE.txt  RUN_APP.sh  TEST_RESULTS.md  climate_health_app.py  test_app_pipeline.py  test_health_data.csv
data/: soweto_south_africa_daily_temp_2016_2022.csv  soweto_south_africa_daily_temp_2020_2020.csv  soweto_south_africa_monthly_temp_2016_2022.csv  soweto_south_africa_monthly_temp_2020_2020.csv  soweto_south_africa_temperature_data_2016_2022.xlsx  soweto_south_africa_temperature_data_2020_2020.xlsx  test_location_daily_temp_2023_2023.csv  test_location_monthly_temp_2023_2023.csv  test_location_temperature_data_2023_2023.xlsx
docs/: BIO_CLIMATE_LINKAGE.md  data_sources.md  getting_started.md
examples/: basic_extraction.py  bio_samples_example.csv  multi_location_extraction.py
examples/mvp/: johannesburg_heat_health_mvp.py
notebooks/: 01_basic_temperature_extraction.ipynb  case_study_soweto.ipynb
r/climatelink/: DESCRIPTION  LICENSE  NAMESPACE  README.md
src/: bio_climate_link.py  climate_utils.py
src/climate_toolkit/: __init__.py  cli.py  (+2 more)
tests/: test_bio_climate_link.py  test_stress_edgecases.py
webapp/: .dockerignore  CLIMATE_VARIABLES.md  Dockerfile  QUICKSTART.md  README.md  start.sh
(+32 files in other folders)
